# prefect-github-workflows

./: .gitignore  AGENTS.md  CODE_STYLE.md  DEVELOPING.md  Dockerfile  Dockerfile.agent  Makefile  README.md  deploy.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: deploy_to_workpool.py  setup_secrets.py
src/prefect_github_workflows/: orchestrator.py  secrets.py
src/prefect_github_workflows/mcp/: config.py  execute_outputs.py  safe_outputs_server.py
src/prefect_github_workflows/prompts/: __init__.py  library.py  registry.py
src/prefect_github_workflows/tasks/: __init__.py  claude.py  clone.py  containers.py  context.py  copilot.py  copilot_auth_proxy.py  dispatch.py  reporting.py  sandbox_env.py
tests/: test_clone.py  test_context.py  test_copilot.py  test_copilot_auth_proxy.py  test_dispatch.py  test_execute_outputs.py  test_registry.py  test_safe_outputs_server.py  test_sandbox_env.py
