[project]
name = "prefect-github-workflows"
version = "0.1.0"
description = "Prefect Cloud orchestrator for running Claude Code and Copilot CLI agents against GitHub repos"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.0,<4.0",
    "prefect-docker>=0.6.0",
    "prefect-aws>=0.5.0",
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
    "ty>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_github_workflows"]

# ── uv ────────────────────────────────────────────────────────────────

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.15",
    "ty>=0.0.20",
]

# ── ruff ──────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
    "RUF",    # ruff-specific
]
ignore = [
    "ANN401",  # dynamically typed expressions (Any) are disallowed
    "S603",    # subprocess call - check for untrusted input (we control inputs)
    "S607",    # partial executable path (we use known CLI tools)
    "S108",    # hardcoded /tmp path (intentional cache dir)
    "TD003",   # missing issue link in TODO
    "COM812",  # trailing comma (conflicts with ruff formatter)
    "ISC001",  # single-line implicit string concatenation (conflicts with formatter)
    "TRY003",  # long messages in exception classes
    "PLR0913", # too many function arguments (Prefect tasks need many params)
    "PLR2004", # magic value comparisons (too noisy for thresholds/limits)
    "EM101",   # raw string in exception (too noisy)
    "EM102",   # f-string in exception (too noisy)
    "PLW1510", # subprocess.run without check= (we handle returncode manually)
    "S110",    # try-except-pass (intentional silent fallbacks)
    "S112",    # try-except-continue (intentional silent fallbacks)
    "FLY002",  # string join vs f-string (join is clearer for lists)
    "PERF401", # list comprehension (loop is clearer when building complex dicts)
    "TRY300",  # consider else block (not always clearer)
    "PLC0415", # import not at top level (intentional lazy import in setup_secrets)
    "RUF001",  # ambiguous unicode (en-dash is intentional)
    "ARG001",  # unused function arguments (kept for interface compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is fine in tests
    "ANN",     # no annotations needed in tests
    "ARG",     # unused arguments for fixtures
    "PLR2004", # magic values in tests are fine
]
"scripts/**" = [
    "T20",     # print is fine in scripts
    "ANN",     # no annotations needed in scripts
]
"deploy.py" = [
    "T20",     # print is fine in deploy script
    "ANN",     # no annotations needed in deploy script
]

[tool.ruff.lint.isort]
known-first-party = ["prefect_github_workflows"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

# ── ty (type checker) ────────────────────────────────────────────────

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Prefect's Secret.load() is typed as returning Secret | Coroutine
# because it's a sync-compatible API. ty can't resolve the overload.
unresolved-attribute = "warn"

# ── pytest ────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
